Add reports history page with loading indicators
- Create reports.html with table displaying all analyzed content
- Implement reports.js to fetch and display reports on page load
- Add Excel-style table borders and column widths
- Add loading indicators to both index and reports pages
- Improve LLM prompt to reduce filler in responses
- Update session tracking and learning flashcards

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -48,6 +48,7 @@
                     rows="3"
                 ></textarea>
             </div>
+            <div id="loading" class="hidden">Analyzing...</div>
 
             <button type="submit">Analyze</button>
             <button type="submit" onclick="window.location.href='reports.html'">View Reports</button>
