Update TODO.md with corrected session history and new sprint blocks
Reorganized session history with correct dates and consolidated multi-session days. Created 7 new blocks for Jan 5-11 sprint focusing on error handling and comments integration.

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -24,16 +24,16 @@
                 <label>Analysis Style:</label>
                 <div class="radio-group">
                     <label class="radio-label">
-                        <input type="radio" name="archetype" value="TWELVE_YEAR_OLD">
-                        12-Year-Old
+                        <input type="radio" name="archetype" value="TLDR" checked>
+                        TL;DR
                     </label>
                     <label class="radio-label">
-                        <input type="radio" name="archetype" value="ENTRY_LEVEL" checked>
-                        Entry Level
+                        <input type="radio" name="archetype" value="KEY_POINTS">
+                        Key Points
                     </label>
                     <label class="radio-label">
-                        <input type="radio" name="archetype" value="HIGH_LEVEL">
-                        High Level
+                        <input type="radio" name="archetype" value="DEEP_DIVE">
+                        Deep Dive
                     </label>
                     <label class="radio-label">
                         <input type="radio" name="archetype" value="CUSTOM">
